--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -1,10 +1,120 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
+@(message: String)
 
-</body>
-</html>
+@import result.Project
+@main("Main Menu") {
+
+    <!--@play20.welcome(message, style = "Java")-->
+
+    <!--<div ui-content-for="title">
+        <span>Forms</span>
+    </div>-->
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href = "/index">Admin @message</a>
+            </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class = "hidden active">
+                        <a href = "#page-top"></a>
+                    </li>
+                    <li class = "page-scroll">
+                        <a href = "/result">Voting Result</a>
+                    </li>
+                    <li class = "page-scoll">
+                        <a href = "/addprojectpage">Add Project</a>
+                    </li>
+                    <li class = "page-scroll">
+                    </li>
+                    <li class="page-scroll">
+                        <a href= "/logout">Log Out</a>
+                    </li>
+                </ul>
+            </div>
+                <!-- /.navbar-collapse -->
+        </div>
+            <!-- /.container-fluid -->
+    </nav>
+
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12" style="text-decoration-color: slategrey">
+                    <h1>EXCEED VOTE</h1>
+                    <h3>(เดี๋ยวค่อยมาแต่งต่อ)</h3>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!--Project selection -->
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1>Projects</h1>
+                    <hr class="star-primary">
+                </div>
+            </div>
+
+            <div class="row">
+            @defining(Project.find.all()) { projects =>
+                @projects.map { project =>
+                    <div class="col-sm-4 portfolio-item">
+                        <a href="@routes.Application.GotoProjectPage( project.id , project.name )" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <h3>Team @project.name</h3>
+                                </div>
+                            </div>
+                            <img src="@routes.Assets.at("images/cake.png")" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                }
+            }
+            </div>
+        </div>
+    </section>
+
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Map</h1>
+                    <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <svg viewBox="0 0 600 300">
+            <!-- Gradient -->
+        <linearGradient class="text-gradient" id="gr-simple" x1="0" y1="0" x2="100%" y2="100%">
+            <stop stop-color="hsl(50, 100%, 70%)" offset="10%"/>
+            <stop stop-color="hsl(320, 100%, 50%)" offset="90%"/>
+        </linearGradient>
+
+            <!-- Text -->
+        <text text-anchor="middle"
+        x="50%"
+        y="50%"
+        dy=".35em"
+        class="text"
+        >
+            Exceed vote
+        </text>
+    </svg>
+}
