--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -1,120 +1,117 @@
 @(message: String)
 
-@import result.Project
-@main("Main Menu") {
+    @import result.Project
 
-    <!--@play20.welcome(message, style = "Java")-->
+<!DOCTYPE html>
 
-    <!--<div ui-content-for="title">
-        <span>Forms</span>
-    </div>-->
-
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href = "/index">Admin: @message</a>
-            </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class = "hidden active">
-                        <a href = "#page-top"></a>
-                    </li>
-                    <li class = "page-scroll">
-                        <a href = "/result">Voting Result</a>
-                    </li>
-                    <li class = "page-scoll">
-                        <a href = "/addprojectpage">Add Project</a>
-                    </li>
-                    <li class = "page-scroll">
-                    </li>
-                    <li class="page-scroll">
-                        <a href= "/logout">Log Out</a>
-                    </li>
-                </ul>
-            </div>
-                <!-- /.navbar-collapse -->
-        </div>
-            <!-- /.container-fluid -->
-    </nav>
-
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12" style="text-decoration-color: slategrey">
-                    <h1>EXCEED VOTE</h1>
-                    <h3>(เดี๋ยวค่อยมาแต่งต่อ)</h3>
-
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!--Project selection -->
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h1>Projects</h1>
-                    <hr class="star-primary">
-                </div>
-            </div>
-
-            <div class="row">
-            @defining(Project.find.all()) { projects =>
-                @projects.map { project =>
-                    <div class="col-sm-4 portfolio-item">
-                        <a href="@routes.Application.GotoProjectPage( project.id , project.name )" class="portfolio-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
-                                    <h3>Team @project.name</h3>
-                                </div>
-                            </div>
-                            <img src="@routes.Assets.at("images/cake.png")" class="img-responsive" alt="">
-
-                        </a>
+    <html>
+        <head>
+            <title>Main</title>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+            <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+            <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+            <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+            <script src="@routes.Assets.at("javascripts/project.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/animatedHeader.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/header.js")" type="text/javascript"></script>
+            <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        </head>
+        <body>
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header page-scroll">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href = "/index">Admin: @message</a>
                     </div>
-                }
-            }
-            </div>
-        </div>
-    </section>
 
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Map</h1>
-                    <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class = "hidden active">
+                                <a href = "#page-top"></a>
+                            </li>
+                            <li class = "page-scroll">
+                                <a href = "/result">Voting Result</a>
+                            </li>
+                            <li class = "page-scoll">
+                                <a href = "/addprojectpage">Add Project</a>
+                            </li>
+                            <li class = "page-scroll">
+                            </li>
+                            <li class="page-scroll">
+                                <a href= "/logout">Log Out</a>
+                            </li>
+                        </ul>
+                    </div>
+                        <!-- /.navbar-collapse -->
                 </div>
-            </div>
-        </div>
-    </header>
+                    <!-- /.container-fluid -->
+            </nav>
 
-    <svg viewBox="0 0 600 300">
-            <!-- Gradient -->
-        <linearGradient class="text-gradient" id="gr-simple" x1="0" y1="0" x2="100%" y2="100%">
-            <stop stop-color="hsl(50, 100%, 70%)" offset="10%"/>
-            <stop stop-color="hsl(320, 100%, 50%)" offset="90%"/>
-        </linearGradient>
+            <header>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12" style="text-decoration-color: slategrey">
+                            <h1>EXCEED VOTE</h1>
+                            <h3>(เดี๋ยวค่อยมาแต่งต่อ)</h3>
 
-            <!-- Text -->
-        <text text-anchor="middle"
-        x="50%"
-        y="50%"
-        dy=".35em"
-        class="text"
-        >
-            Exceed vote
-        </text>
-    </svg>
-}
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+            <!--Project selection -->
+            <section id="portfolio">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h1>Projects</h1>
+                            <hr class="star-primary">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                    @defining(Project.find.all()) { projects =>
+                        @projects.map { project =>
+                            <div class="col-sm-4 portfolio-item">
+                                <a href="@routes.Application.GotoProjectPage( project.id , project.name )" class="portfolio-link" data-toggle="modal">
+                                    <div class="caption">
+                                        <div class="caption-content">
+                                            <i class="fa fa-search-plus fa-3x"></i>
+                                            <h3>Team @project.name</h3>
+                                        </div>
+                                    </div>
+                                    <img src="@routes.Assets.at("images/cake.png")" class="img-responsive" alt="">
+
+                                </a>
+                            </div>
+                        }
+                    }
+                    </div>
+                </div>
+            </section>
+
+            <header>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>Map</h1>
+                            <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </body>
+    </html>
