fig bug(Add getTypr method)

--- a/app/Admin/userList.scala.html
+++ b/app/Admin/userList.scala.html
@@ -20,7 +20,7 @@
         <div class="text-center">
             <form action = "/deleteAcc" method = post>
                 <div class="form-group">
-                    <label for="id">Username</label>
+                    <label for="id">ID Delete</label>
                     <input class="form-control" id="id" name="id" placeholder="Enter ID" >
                     <button button id="submit" type="submit"  class="btn btn-danger">Delete</button>
                 </div>
