get some button out from index page and login. add regis to admin page

--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -54,6 +54,9 @@
                             <li class = "page-scoll">
                                 <a href = "/addprojectpage">Add Project</a>
                             </li>
+                            <li class = "page-scoll">
+                                <a href = "/register">register</a>
+                            </li>
                             <li class = "page-scroll">
                             </li>
                             <li class="page-scroll">
