--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -49,6 +49,9 @@
                                 <a href = "#page-top"></a>
                             </li>
                             <li class = "page-scroll">
+                                <a href = "/TimerPage">Timer</a>
+                            </li>
+                            <li class = "page-scroll">
                                 <a href = "/result">Voting Result</a>
                             </li>
                             <li class = "page-scoll">
