Fixed vote system bugs

--- a/app/Admin/userList.scala.html
+++ b/app/Admin/userList.scala.html
@@ -32,6 +32,7 @@
                         <th>Username</th>
                         <th>Password</th>
                         <th>Type</th>
+                        <th>GroupID</th>
 
                     </tr>
                 </thead>
@@ -43,6 +44,7 @@
                     <td>@acc.username</td>
                     <td>@acc.password</td>
                     <td>@acc.getType</td>
+                    <td>@acc.groupid</td>
 
                 </tr>
                 <tbody>
