--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -50,7 +50,7 @@
                                 <a href = "#page-top"></a>
                             </li>
                             <li class = "page-scroll">
-                                <a href = "/TimerPage">Timer</a>
+                                <a href = "/TimerPage">Set Timer</a>
                             </li>
                             <li class = "page-scroll">
                                 <a href = "/result">Voting Result</a>
