--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -1,6 +1,8 @@
 @(message: String)
 
-    @import result.Project
+@import result.Project
+@import play.api.Play.resource
+@import play.api.Play.current
 
 <!DOCTYPE html>
 
@@ -106,8 +108,11 @@
                                             <h3>Team @project.name</h3>
                                         </div>
                                     </div>
-                                    <img src="@routes.Assets.at("images/cake.png")" class="img-responsive" alt="">
-
+                                    @if(resource("public/projectimages/" + project.id + ".png").isDefined) {
+                                        <img src="@routes.Assets.at("projectimages/" + project.id + ".png")" class="img-responsive" alt="">
+                                    } else {
+                                        <img src="@routes.Assets.at("images/cake.png")" class="img-responsive" alt="">
+                                    }
                                 </a>
                             </div>
                         }
