--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -20,6 +20,7 @@
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.css")">
                 <!-- jQuery -->
             <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/jquery.countdown.js")"></script>
                 <!-- Bootstrap Core JavaScript -->
             <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
 
@@ -42,7 +43,8 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href = "/index">Admin: @message</a>
+                        <a class="navbar-brand" href = "/index">Admin: @message @if(controllers.TimerController.getTimeLeftInSec() != -1) {
+                            : Vote closes in <div id = "clock" style="display: inline"></div>}else { : Vote is close}</a>
                     </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -159,6 +161,27 @@
                     </div>
                 </div>
             </footer>
+
+            <script type="text/javascript">
+            $('#clock').countdown('2015/04/18 ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
+            .on('update.countdown', function(event) {
+            var format = '%H:%M:%S';
+            if(event.offset.days > 0) {
+            format = '%-d day%!d ' + format;
+            }
+            if(event.offset.weeks > 0) {
+            format = '%-w week%!w ' + format;
+            }
+            $(this).html(event.strftime(format));
+            })
+            .on('finish.countdown', function(event) {
+            $(this).html('Vote is closed!');
+            $("#openPopUp").on("click",function(e) {
+            e.preventDefault(); // (or return false;)
+            })
+            //.parent().addClass('disabled')
+            });
+            </script>
 
                 <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
             <div class="scroll-top page-scroll visible-xs visble-sm">
