--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -82,7 +82,7 @@
                     <div class="row">
                         <div class="col-lg-12" style="text-decoration-color: slategrey">
                             <h1>EXCEED VOTE</h1>
-                           
+                            <hr class="star-light">
 
                         </div>
                     </div>
