--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -106,7 +106,6 @@
                                 <a href="@routes.Application.GotoProjectPage( project.id , project.name )" class="portfolio-link" data-toggle="modal">
                                     <div class="caption">
                                         <div class="caption-content">
-                                            <i class="fa fa-search-plus fa-3x"></i>
                                             <h3>Team @project.name</h3>
                                         </div>
                                     </div>
@@ -128,6 +127,8 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>Map</h1>
+                            <hr class="star-light">
+                            <br>
                             <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
                         </div>
                     </div>
