--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -54,6 +54,9 @@
                                 <a href = "#page-top"></a>
                             </li>
                             <li class = "page-scroll">
+                                <a href = "/criteria">Criteria Vote</a>
+                            </li>
+                            <li class = "page-scroll">
                                 <a href = "/TimerPage">Set Timer</a>
                             </li>
                             <li class = "page-scroll">
