--- a/app/Admin/userList.scala.html
+++ b/app/Admin/userList.scala.html
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/index">Rating result</a>
+                    <a class="navbar-brand" href="/index">User List</a>
                 </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
