edited header in index page

--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -84,9 +84,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12" style="text-decoration-color: slategrey">
-                            <h1>EXCEED VOTE</h1>
+                            <img src="@routes.Assets.at("images/rocket.png")" alt="map" style="width:150px;">
+                            <h1 id="exceedHead">EXCEED VOTE</h1>
                             <hr class="star-light">
-
                         </div>
                     </div>
                 </div>
