Added message rated project / Fixed voting result bugs

--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -1,6 +1,7 @@
 @(message: String)
 
 @import result.Project
+@import result.Vote
 @import play.api.Play.resource
 @import play.api.Play.current
 
@@ -108,7 +109,11 @@
                                 <a href="@routes.Application.GotoProjectPage( project.id , project.name )" class="portfolio-link" data-toggle="modal">
                                     <div class="caption">
                                         <div class="caption-content">
+                                        @if(Vote.findExist(session().get("id")+"", project.id+"") != null) {
+                                            <h3>Team @project.name (Rated)</h3>
+                                        } else {
                                             <h3>Team @project.name</h3>
+                                        }
                                         </div>
                                     </div>
                                     @if(controllers.ImageController.checkExist(project.id) && project.id != null && project.id >= 1) {
