--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -42,8 +42,8 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href = "/index">Admin : @message @if(controllers.TimerController.getTimeLeftInSec() != -1) {
-                            : <div id = "clock" style="display: inline"></div>}else { : Vote is closed}</a>
+                        <a class="navbar-brand" style="white-space: pre-line;" href = "/index">Admin : @message @if(controllers.TimerController.getTimeLeftInSec() != -1) {
+                            <div id = "clock" style="display: inline"></div>}else { : Vote is closed}</a>
                     </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
