edited admin name

--- a/app/Admin/MainAdmin.scala.html
+++ b/app/Admin/MainAdmin.scala.html
@@ -55,10 +55,10 @@
                                 <a href = "#page-top"></a>
                             </li>
                             <li class = "page-scroll">
-                                <a href = "/criteria">Criteria Vote</a>
+                                <a href = "/criteria">Vote</a>
                             </li>
                             <li class = "page-scroll">
-                                <a href = "/TimerPage">Set Timer</a>
+                                <a href = "/TimerPage">Timer</a>
                             </li>
                             <li class = "page-scroll">
                                 <a href = "/result">Voting Result</a>
@@ -67,7 +67,7 @@
                                 <a href = "/addprojectpage">Add Project</a>
                             </li>
                             <li class = "page-scoll">
-                                <a href = "/register">register</a>
+                                <a href = "/register">User</a>
                             </li>
                             <li class = "page-scroll">
                             </li>
