--- a/app/Admin/userList.scala.html
+++ b/app/Admin/userList.scala.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
             <!-- Custom CSS -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/result.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/userList.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
             <!-- Bootstrap Core JavaScript -->
@@ -89,31 +89,57 @@
                                     <button button id="submit" type="submit"  class="btn btn-danger">Delete</button>
                                 </div>
                             </form>
-                            <table class="table table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Username</th>
-                                        <th>Password</th>
-                                        <th>Type</th>
-                                        <th>GroupID</th>
 
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                @accList.map { acc =>
-                                    <tr>
 
-                                        <td id="id" name="id">@acc.id</td>
-                                        <td>@acc.username</td>
-                                        <td>@acc.password</td>
-                                        <td>@acc.getType</td>
-                                        <td>@acc.groupid</td>
 
-                                    </tr>
-                                <tbody>
-                                }
+                            @*<table class="table table-bordered">*@
+                                @*<thead>*@
+                                    @*<tr>*@
+                                        @*<th>Id</th>*@
+                                        @*<th>Username</th>*@
+                                        @*<th>Password</th>*@
+                                        @*<th>Type</th>*@
+                                        @*<th>GroupID</th>*@
+
+                                    @*</tr>*@
+                                @*</thead>*@
+                                @*<tbody>*@
+                                @*@accList.map { acc =>*@
+                                    @*<tr>*@
+
+                                        @*<td id="id" name="id">@acc.id</td>*@
+                                        @*<td>@acc.username</td>*@
+                                        @*<td>@acc.password</td>*@
+                                        @*<td>@acc.getType</td>*@
+                                        @*<td>@acc.groupid</td>*@
+
+                                    @*</tr>*@
+                                @*<tbody>*@
+                                @*}*@
+                            @*</table>*@
+
+                            <table class="rwd-table">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Username</th>
+                                    <th>Password</th>
+                                    <th>Type</th>
+                                    <th>GroupID</th>
+                                </tr>
+
+                                <tr>
+                                    <tbody>
+                                    @accList.map { acc =>
+                                            <td id="id" name="id" data-th="ID">@acc.id</td>
+                                            <td data-th="Username">@acc.username</td>
+                                            <td data-th="Password">@acc.password</td>
+                                            <td data-th="Type">@acc.getType</td>
+                                            <td data-th="GroupID">@acc.groupid</td>
+                                    <tbody>}
+                                </tr>
                             </table>
+
+
                         </div>
                     </div>
                 </div>
